[gd_scene load_steps=9 format=3 uid="uid://cjifpt5liq1x2"]

[ext_resource type="Script" path="res://all script/main_menu.gd" id="1_8udf7"]
[ext_resource type="Texture2D" uid="uid://386vewysh68g" path="res://asset/Screenshot (93).png" id="2_2q774"]
[ext_resource type="Texture2D" uid="uid://k0ibq3tgux2e" path="res://asset/name game.png" id="3_ld3ln"]
[ext_resource type="FontFile" uid="uid://b2sxc7xhselk4" path="res://asset/Wonder Boys.ttf" id="4_716a7"]
[ext_resource type="AudioStream" uid="uid://dmrunfr7erho5" path="res://asset/sound/click-on-mouse.mp3" id="5_2ocm7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m8kss"]
bg_color = Color(0.827, 0.545, 0.078, 0.845)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.000245483, 0.000245483, 0.000245483, 0.73)
shadow_size = 5
shadow_offset = Vector2(0, 0.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6npc8"]
bg_color = Color(0.307907, 0.191577, 0.00951735, 0.845)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.000245483, 0.000245483, 0.000245483, 0.73)
shadow_size = 5
shadow_offset = Vector2(0, 0.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0h6rk"]
bg_color = Color(0.036, 0.059, 0.021, 0.845)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.295, 0.295, 0.295, 0.73)
shadow_size = 5
shadow_offset = Vector2(0, 0.41)

[node name="mainMenu1" type="Node"]
script = ExtResource("1_8udf7")

[node name="clickSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -154)
stream = ExtResource("5_2ocm7")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2q774")
expand_mode = 1

[node name="Panel" type="Panel" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="TextureRect/Panel"]
texture_filter = 6
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -334.5
offset_top = 60.0
offset_right = 334.5
offset_bottom = 222.0
grow_horizontal = 2
texture = ExtResource("3_ld3ln")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -214.0
offset_top = -383.0
offset_right = 215.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 1

[node name="startGame" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.877616, 0.877616, 0.877616, 1)
theme_override_colors/font_pressed_color = Color(0.219608, 0.141176, 0.113725, 1)
theme_override_colors/font_focus_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.827563, 0.543611, 0.0787435, 1)
theme_override_fonts/font = ExtResource("4_716a7")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxFlat_m8kss")
theme_override_styles/hover = SubResource("StyleBoxFlat_6npc8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6npc8")
theme_override_styles/normal = SubResource("StyleBoxFlat_0h6rk")
text = "Start Game"

[node name="exit" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.877616, 0.877616, 0.877616, 1)
theme_override_colors/font_pressed_color = Color(0.219608, 0.141176, 0.113725, 1)
theme_override_colors/font_focus_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.827451, 0.545098, 0.0784314, 1)
theme_override_fonts/font = ExtResource("4_716a7")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxFlat_m8kss")
theme_override_styles/hover = SubResource("StyleBoxFlat_6npc8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6npc8")
theme_override_styles/normal = SubResource("StyleBoxFlat_0h6rk")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/startGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
